// grid - shared - fix layout being cut off/make sure grid columns are same height

--- a/webapp/sass/theme/shared.scss
+++ b/webapp/sass/theme/shared.scss
@@ -143,7 +143,8 @@ p{
 //-----------------------------
 .main-container{
   background: $color-global-bg;
-  height:100%;
+  position: relative;
+  min-height:100%;
 }
 
 .yellow-container{
